<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">My todo</string>
    <string name="hint_item">Enter Task</string>
    <string name="hint_qty">Place</string>
    <string name="hint_color">Time</string>
    <string name="hint_size">Deadline</string>
    <string name="save_button">Save</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_time">Edit Item</string>
    <string name="update_text">Update</string>
    <string name="text">\" TEXT,\"</string>
</resources>
