<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/Myplan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint_item"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/MyPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Myplan"
                android:hint="@string/hint_qty"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/Mytime"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/MyPlace"
                android:focusable="false"
                android:hint="@string/hint_color"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/Mydeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Mytime"
                android:hint="@string/hint_size"
                android:focusable="false"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Mydeadline"
                android:layout_marginEnd="5dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="107dp"
                android:layout_marginEnd="18dp"
                android:hapticFeedbackEnabled="true"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>